commented the main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,13 @@ tr:hover {
   }
 }
 
-
+.full_list {
+  height: 92vh;
+  padding: 50px;
+  align-items: center;
+  overflow: scroll;
+  padding-top: 12%;
+}
 
 .admin {
   height: 92vh;
@@ -196,7 +202,12 @@ tr:hover {
   overflow: scroll;
 }
 
-
+.add_admin {
+  height: 92vh;
+  padding: 50px;
+  align-items: center;
+  padding-top: 12%;
+}
 
 #login-form {
   padding: 10x;
