--- a/assets/css/gallery_main.css
+++ b/assets/css/gallery_main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #434c50;
+    background-color: #f4f8fa;
     min-height: 100vh;
     font: normal 16px sans-serif;
     padding: 40px 0;
