--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;    
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.6;
-    color: #fff;
+    background-color: hsl(0, 0%, 100%);
+    color: rgb(0, 0, 0);
     margin: 0 auto;
 }
 
@@ -23,7 +30,7 @@ h3 {
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-weight: 100;
     font-size: 14px;    
 }
@@ -47,7 +54,6 @@ img {
 
 /* Footer Style */
 .footer {
-    background-color: #1f1f1f;
     width: 1200px;
     max-width: 98%;
     padding: 80px 20px 30px 20px;
@@ -55,7 +61,7 @@ img {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 80px;    
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid rgb(0, 0, 0);
 }
 
 .logo {
@@ -87,7 +93,7 @@ img {
 }
 
 .input-container i {
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     color: #ed2b66;
     padding: 5px 10px;
     border-bottom-left-radius: 10px;
@@ -105,7 +111,7 @@ img {
     border: none;
     background-color: #ed2b66;
     border-bottom-left-radius: 10px;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-family: 'Poppins', sans-serif;    
 }
 
@@ -131,28 +137,62 @@ img {
     letter-spacing: 1px;
 }
 
-.social-icons {
-    display: block;
+/*social icons*/
+.social_links
+{
+    background: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-
-.social-icons i {    
-    font-size: 18px;
-    color: #fff;
-    padding: 0 15px;
+.social_links .combo
+{
+    transform: scale(0.9);
+    transition: 0.4s ease-in;
+    margin: 0 0.5rem;
+    height: 2em;
+    width: 2em;
+    line-height: 2em;
 }
-
-.social-icons .fa-facebook {
-    padding: 0 15px 0 0;
+.combo .circle
+{
+    color: #000000;
+    transition: 0.4s ease-in;
+    font-size: 2em;
 }
-
-.social-icons i:hover {
-    color: #ed2b66;
-    transition: 0.3s;
+.combo .icon
+{
+    color: #aaa5a5;
+    font-size: 1rem;
+    transform: translateY(1px);
+    transition: 0.2s ease-in;
 }
-
-
-.empty-space {    
-    min-height: 800px;
+.combo:hover
+{
+    transform: scale(1.1);
+}
+.combo:hover , .combo:hover .icon
+{
+    color:white;
+}
+.ig:hover , .ig:hover .circle
+{
+    color:#e91e63;
+}
+.fb:hover , .fb:hover .circle
+{
+    color:#2196f3;
+}
+.yt:hover , .yt:hover .circle
+{
+    color:#f44336;
+}
+.tw:hover , .tw:hover .circle
+{
+    color:#2196f3;
+}
+.gt:hover , .gt:hover .circle{
+    color: #1f1f1f;
 }
 
 
@@ -209,68 +249,10 @@ img {
         text-align: center;
     }
     
-    .social-icons {
+    .social_links {
         margin: 10px 0;
     }
     .copyright {
         margin-bottom: 20px;
     }
-}
-
-.social_links
-{
-    background: #383838;
-    border-radius: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.social_links .combo
-{
-    transform: scale(0.9);
-    transition: 0.4s ease-in;
-    margin: 0 0.5rem;
-    height: 3em;
-    width: 3em;
-    line-height: 3em;
-}
-.combo .circle
-{
-    color: #f9f9f9;
-    transition: 0.4s ease-in;
-    font-size: 3em;
-}
-.combo .icon
-{
-    color: #444343;
-    font-size: 2rem;
-    transform: translateY(1px);
-    transition: 0.2s ease-in;
-}
-.combo:hover
-{
-    transform: scale(1.1);
-}
-.combo:hover , .combo:hover .icon
-{
-    color:white;
-}
-.ig:hover , .ig:hover .circle
-{
-    color:#e91e63;
-}
-.fb:hover , .fb:hover .circle
-{
-    color:#2196f3;
-}
-.yt:hover , .yt:hover .circle
-{
-    color:#f44336;
-}
-.tw:hover , .tw:hover .circle
-{
-    color:#2196f3;
-}
-.gt:hover , .gt:hover .circle{
-    color: #1f1f1f;
 }
